fix backdrop grid alignment

--- a/source/stylesheets/_recent-posts.scss
+++ b/source/stylesheets/_recent-posts.scss
@@ -20,13 +20,18 @@ $recent-posts-border-color: #eee;
       margin-top: 0;
       width: calc(50%);
 
+      .card_backdrop {
+        background-size: contain;        
+      }
+
       &:nth-child(even) {
         border-right: 1px solid $recent-posts-border-color;
 
         .card_backdrop {
-          border-right: 1px solid rgba(0, 0, 0, .5);
-          margin-right: -1px;
+          width: calc(100% + 1px);
           padding-top: calc(56.249999993% + 1px);
+          // border-right: 1px solid rgba(0, 0, 0, .5);
+          // margin-right: -1px;
         }
       }
 
