--- a/source/stylesheets/_review.scss
+++ b/source/stylesheets/_review.scss
@@ -86,9 +86,9 @@ $review-more-background-color: #f1f1f1;
         border-right: 1px solid $recent-posts-border-color;
 
         .card_backdrop {
-          border-right: 1px solid rgba(0, 0, 0, .5);
-          margin-right: -1px;
+          width: calc(100% + 1px);
           padding-top: calc(56.249999993% + 1px);
+          background-size: contain;
         }
       }
 
@@ -100,6 +100,7 @@ $review-more-background-color: #f1f1f1;
           border-right: 0;
           margin-right: 0;
           padding-top: 56.249999993%;
+          width: 100%;
         }
       }
     }
